# torchdtw

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
benchmark/: README.md  pyproject.toml  setup.py
benchmark/src/dtw_benchmark/: __init__.py  __main__.py  dtw_cython.pyi  dtw_cython.pyx  dtw_numba.py  dtw_triton.py  impl.py  implementations.py  interface.py
src/torchdtw/: __init__.py  dtw.py
src/torchdtw/csrc/: dtw.cpp
src/torchdtw/csrc/cuda/: dtw.cu
tests/: test_dtw.py  test_opcheck.py
