[build-system]
requires = ["setuptools>=80.9.0", "numpy>=2.3.4", "cython>=3.1.6"]
build-backend = "setuptools.build_meta"

[project]
name = "dtw-benchmark"
version = "0.1.0"
description = "Benchmark DTW implementations"
readme = "README.md"
authors = [
    { name = "Maxime Poli" },
    { name = "CoML", email = "dev@cognitive-ml.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "torchdtw",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "triton>=3.5.0",
]

[tool.distutils.bdist_wheel]
py_limited_api = "cp312"

[tool.uv.sources]
torchdtw = { workspace = true }
